--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=RealTimeTicketing-system
+
+    #h2 database configuration
+spring.datasource.url=jdbc:h2:mem:ticketdb
+spring.datasource.driverClassName=org.h2.Driver
+
+# JPA Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
