--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.url=jdbc:h2:mem:ticketdb
 spring.datasource.driverClassName=org.h2.Driver
 
 # JPA Hibernate Configuration
+# mapping java objects to relational databases
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
