Initialized rest controllers
They are  Java classes responsible for handling incoming HTTP requests and returning an appropriate response.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.driverClassName=org.h2.Driver
 # mapping java objects to relational databases
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+#server configuration(specifies the server the application will run)
+server.port=8080
+
+#logging configuration
+logging.level.org.springframework=INFO
